--- a/.env.local
+++ b/.env.local
@@ -2,4 +2,4 @@ OPENAI_API_KEY=sk-svcacct-zGNIqgvu_BdJltwYnyNtRWwGHF2S6QORhS66F4VSRf50NZ0exllGeB
 NEXT_PUBLIC_ASSISTANT_ID=asst_5hwFmcy8wEFQlxOx8Uf9cEaP
 GOOGLE_CLIENT_ID=42247177340-91d3snbl55r274sa4kg4og7jks6b4t4l.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-NEXT_PUBLIC_BASE_URL=https://your-vercel-app.vercel.app
+NEXT_PUBLIC_BASE_URL=https://mabel-career-coach.vercel.app
