--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "dependencies": {
     "next": "^14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "googleapis": "^133.0.0",
-    "openai": "^4.15.0"
+    "react-dom": "^18.2.0"
   }
 }
